--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -83,10 +83,18 @@
                 <ul class="right-menu">
                     <li class="Search-demo-tour-class">
                         <div class="searchbar">
-                            <input type="text" class="form-control" placeholder="Search" />
+                            <input type="text" class="form-control" *ngIf="flag" [(ngModel)]="searchText"  (keyup)="getSearchProduct(searchText)" placeholder="Search" />
+                            <input class="form-control" [(ngModel)]="searchText" disabled *ngIf="!flag" type="text" />  
                             <i class="fa fa-search"></i>
                         </div>
-
+                     
+                            <ul [className]="flag ?  'subshow search-result' : ' subhide'" *ngIf="flag"  >  
+                                <li class="productlist" *ngFor="let product of products | slice:0:15; let i=index">  
+                                    <a (click)="onselectProduct(product)">{{product.itemCode}}</a>  
+                                </li>             
+                            </ul>  
+                      
+                    
                         <!-- <a [routerLink]="['/store/search-products']"></a> -->
                     </li>
                     <li class="cart-item Cart-Item-demo-tour-class"><a [routerLink]="['/store/cart']"><i
