--- a/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.html
+++ b/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.html
@@ -432,7 +432,7 @@
 
                                                                                                 <div *ngIf="submitted && f.zip?.errors" class="invalid-feedback">
                                                                                                     <div *ngIf="f.zip.errors.required">
-                                                                                                        City is required
+                                                                                                        Zip is required
                                                                                                     </div>
                                                                                                 </div>
                                                                                                 <div class="req">
