--- a/src/app/components/layout/app-header/app-header.component.css
+++ b/src/app/components/layout/app-header/app-header.component.css
@@ -158,6 +158,30 @@ ul.right-menu li i.fas.fa-user-circle {
     color: #b3b3b3;
 }
 
+
+ul.search-result.ng-star-inserted {
+    z-index: -1px;
+    flex-direction: column;
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 0px 3px 5px 1px #6d6d6db0;
+    top: 50px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    z-index: -1;
+    left: 0px;
+    min-width: 250px;
+    width: 100%;
+    padding: 10px 11px;
+}
+
+
+ul.search-result.hide {
+   display: none;
+}
+li.productlist.ng-star-inserted {
+    min-width: 200px;
+}
 @media(min-width:992px) {
     .logo-center {
         position: absolute;
