--- a/src/app/components/layout/app-header/app-header.component.css
+++ b/src/app/components/layout/app-header/app-header.component.css
@@ -182,6 +182,37 @@ ul.search-result.hide {
 li.productlist.ng-star-inserted {
     min-width: 200px;
 }
+
+
+ul.subhide.search-result {
+    display: none;
+}
+
+ul.search-result {
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 0px 1px 3px #b5b5b5;
+    border-bottom-left-radius: 6px;
+    top: 47px;
+    border-bottom-right-radius: 6px;
+    padding: 8px 0;
+}
+
+ul.search-result li a {
+    padding: 4px 10px;
+    display: block;
+}
+
+ul.search-result li {
+    display: block !important;
+    margin: 0px !important;
+    min-width: 230px !important;
+}
+
+div#main-menu li  ul.search-result li a:hover {
+    color: #444 !important;
+}
+
 @media(min-width:992px) {
     .logo-center {
         position: absolute;
