--- a/src/app/components/auth/account-settings/subscriptions/subscriptions.component.html
+++ b/src/app/components/auth/account-settings/subscriptions/subscriptions.component.html
@@ -91,7 +91,7 @@
                                         </div>
 
                                         <div class="emailbtns">
-                                            <div class="trck-order">
+                                            <div class="trck-order subscript">
                                                 <a href="#"> <button class="trck-order-btn">Edit Subscription</button></a>
                                             </div>
 
