changes for enrollment

--- a/src/app/components/auth/account-settings/payments/payments.component.html
+++ b/src/app/components/auth/account-settings/payments/payments.component.html
@@ -206,7 +206,7 @@
                                 </ngb-panel>
 
 
-                                <ngb-panel id="secondarycard{{i}}" *ngFor="let item of paymentCards;let i = index" >
+                                <ngb-panel id="secondarycard{{i}}" *ngFor="let item of secondaryCards;let i = index" >
                                     <ng-template ngbPanelTitle>
                                         <div class="heading-step1 profile-section">
                                             <h4> Secondary Card</h4>
